<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view0"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/View" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_placeholder_on_map_paper_in_perspective"
            android:title="@string/Map" />
        <item
            android:id="@+id/nav_tutorial"
            android:icon="@drawable/ic_video_tutorial"
            android:title="@string/Tutorial" />
        <item
            android:id="@+id/nav_calibration"
            android:icon="@drawable/ic_compass"
            android:title="@string/Calibration" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_work_tool"
            android:title="@string/Settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_icon"
            android:title="@string/About" />
    </group>

</menu>
